# treequest_pf

./: .gitignore  .jupytext.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
LEGACY_PLANS/: combined_approach.md  particle-filtering-treequest-integration-assessment.md  treequest-particle-filter-integration-plan.md
PLANS/: combined-plan-feedback.md  combined-treequest-particle-filtering-implementation-plan-v2.md  combined-treequest-particle-filtering-implementation-plan.md  treequest-coding-problem-solver-implementation-plan.md
REFERENCE/: google-genai-doc.md  itshub_API_REFERENCE.md  itshub_INTEGRATION_GUIDE.md  probabilistic_inference_approach_to_inference_time_scaling_of_llms_using_particle_based_monte_carlo_methods.md  treequest_code_reference.md  treequest_intro.md  treequest_paper.md
its_hub/: CLAUDE.md  README.md  itshub_original_pyproject.toml  original_CLAUDE.md
its_hub/.devcontainer/: Dockerfile  devcontainer.json
its_hub/docs/: README.md  _navbar.md  _sidebar.md  benchmarking.md  index.html  installation.md  usage.md
its_hub/its_hub/: __init__.py  base.py  lms.py  types.py
its_hub/its_hub/algorithms/: __init__.py  bon.py  self_consistency.py
its_hub/scripts/: benchmark.py  test_math_example.py
its_hub/tests/: conftest.py  test_iaas.py  test_lms.py  test_particle_gibbs_resampling.py
src/its_hub/docs/: _coverpage.md  algorithms.md  development.md  quick-start.md
src/its_hub/its_hub/: error_handling.py  utils.py
src/its_hub/notebooks/: self-consistency.ipynb  self-consistency.py
src/its_hub/tests/: test_algorithms.py
src/treequest/: __init__.py  imports.py  ranker.py  types.py  visualization.py
tests/: test_ab_mcts_a.py  test_ab_mcts_a_visualization.py  test_ab_mcts_m_algo.py  test_ab_mcts_m_algo_advanced.py  test_best_first_search.py  test_interface.py  test_multi_armed_bandit_ucb.py  test_standard_mcts.py  test_tot_bfs.py  test_tree.py
(+18 files in other folders)
