[project]
name = "treequest_particle_filtering"
version = "0.1.0"
description = "A Tree Search Library with Flexible API for LLM Inference-Time Scaling Incorporating Insights From Particle Filtering"
readme = "README.md"
authors = [
    { name = "Kou Misaki", email = "kou.misaki@sakana.ai" },
    { name = "Takuya Akiba", email = "takiba@sakana.ai" },
    {name = "Kai Xu and the Red Hat AI Innovation Team", email = "xuk@redhat.com"},
    {name = "Jeff Coggshall", email = "alocalminina@gmail.com"}
]
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.3.0",
    "scipy>=1.0.0",
    "openai>=1.75.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.0.0",
    "reward-hub==0.1.1",
    "vllm<=0.9.1",  # Pin to avoid build issues with newer versions requiring Rust compilation - maybe this is fixed now? need to check
    "backoff>=2.2.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0"
]

[project.optional-dependencies]
abmcts-m = [
    "jax>=0.5.2",
    "numpy>=1.26.4",
    "numpyro>=0.17.0",
    "pandas>=2.2.3",
    "pymc>=5.21.0",
    "xarray>=2025.1.2",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "jupytext>=1.15.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treequest", "src/its_hub"]

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
    "line-profiler>=4.2.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.9",
]
